[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kroger-api"
version = "0.1.0"
description = "A simple ORM Python wrapper for the Kroger API"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Steven Hogue", email = "steven.d.hogue@gmail.com"},
]

requires-python = ">=3.11"
dependencies = [
    "clientforge>=0.7.0",
    "dataclass-wizard==0.35.0",
    "pre-commit>=4.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.1.1",
    "hatchling>=1.27.0",
    "mypy>=1.14.1",
    "ruff>=0.9.6",
]

[tool.pyright]
# All I want is to ignore 'Expected expression'
#  for some dataclass_wizard components,
#  but I can't figure out how to do that
#  so I'm just disabling all errors for now.
ignore = ["*"]

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # docstyle
    "D",
]
[tool.ruff.lint.per-file-ignores]
"*/models.py" = ["D101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[[tool.mypy.overrides]]
module = ["clientforge.*", "dataclass_wizard.*"]
ignore_missing_imports = true

[tool.uv.sources]
clientforge = { path = "../clientforge" }
